--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,28 @@
-spring.application.name=Integrador-TP3
+spring.application.name=Integrador-TP4
 
 #H2
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./h2/testdb
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./h2/testdb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.username=root
+spring.datasource.password=
+spring.h2.console.enabled=true
 #server.port=8090
 #base_url=http://localhost:8090
 
 #http://localhost:8080/h2-console
 
 # MySQL
-spring.datasource.url=jdbc\:mysql\://localhost\:3306/spring
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.datasource.url=jdbc\:mysql\://localhost\:3306/spring
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=8080
 base_url=http://localhost:8080
