--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,13 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<version>0.12.3</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.3</version>
+			<scope>runtime</scope>
 		</dependency>
 		<!-- Test -->
 		<dependency>
@@ -77,9 +83,7 @@
 			<version>1.18.34</version>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
-
 
 
 	<build>
